# rust-auth0-playground

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: authentication.rs  cache.rs  extractors.rs  main.rs  middlewares.rs  types.rs
src/api/: auth.rs  routes.rs
src/api/auth/: handlers.rs  routes.rs
src/api/messages/: handlers.rs  routes.rs  types.rs
src/extractors/: claims.rs
