[package]
name = "api_actix-web_rust_hello-world"
version = "0.1.0"
authors = ["Sebastian Estrella <sestrella@stackbuilders.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "^0.6"
actix-web = { version = "^4.1" , features = ["rustls"] }
actix-session = { version = "0.7", features = ["redis-actor-session"] }
actix-web-httpauth = "^0.8"
derive_more = "^0.99.16"
dotenv = "^0.15.0"
env_logger = "^0.9.0"
envy = "^0.4.2"
jsonwebtoken = "^8.0.0-beta.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "^1.0.130"
anyhow = "1.0.64"
async-trait = "0.1.57"
redis = "0.21.6"
